<resources>
    <string name="app_name">Eventivo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eventivo</string>
    <string name="nav_header_subtitle">eventivo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_delete_eventos">Limpiar Eventos</string>
    <string name="action_delete_invitados">Limpiar Invitados</string>


    <string name="menu_eventos">Eventos</string>
    <string name="menu_invitados">Invitados</string>
    <string name="menu_creacion_evento">Crear Evento</string>
    <string name="menu_edicion_evento">Actualizar Evento</string>
    <string name="menu_creacion_invitado">Crear Invitado</string>
    <string name="menu_edicion_invitado">Actualizar Invitado</string>

    <string name="lbl_content_image_evento">Icono de evento</string>
    <string name="lbl_content_icon_mas">Leer mas</string>
    <string name="lbl_Fecha">MM/DD/AA</string>
    <string name="btn_fecha">Fecha</string>
    <string name="lbl_Expositor">Expositor</string>
    <string name="lbl_Tema">Tema</string>
    <string name="lbl_Estado">Finalizado</string>
    <string name="lbl_Detalle">Detalle</string>
    <string name="lbl_Guardar">Guardar</string>
    <string name="lbl_agregar_registro">Agregar</string>
    <string name="lbl_invitado_image">Imagen de invitado</string>
    <string name="lbl_contenido">Leer mas</string>
    <string name="lbl_Invitado">Invitado</string>
    <string name="btnGuardado">Guardar</string>
    <string name="lbl_correo">Correo</string>
</resources>